Changes in version 0.1.2

o CHANGE: uses *googledrive* rather than *osfr* to import semantic spaces for `nlp_scores`


Changes in version 0.1.1

o CHANGE: default `preprocess` set to `FALSE`; working out current issues that appear with non-standard ASCII text

o CHANGE: miniconda + modules are now installed as standalone for the package (replaces the need for Python and avoids conflicting versions)

o UPDATE: vignette reflects miniconda + module installation change 


Changes in version 0.1.0

o ADD: default options to `transformer_scores`: Cross-Encoder's RoBERTa and distillRoBERTa as well as Facebook's BART Large

o ADD: ability to specify any zero-shot classification pipeline by using specified pipeline's name (see Examples in `transformer_scores`)

o ADD: package startup message

o ADD: `utils-transforEmotion` for internal functions

o ADD: `nlp_scores` to compute semantic similarities using Natural Language Processing with word embeddings

o ADD: basic preprocessing functions (internally handled)

o ADD: `stop_words` from the *tm* package for preprocessing


Initial commit version 0.0.1